fix(layout): prevent page shift when sidebar is open

--- a/#source/scss/base/_base.scss
+++ b/#source/scss/base/_base.scss
@@ -66,4 +66,6 @@ body::-webkit-scrollbar-thumb:hover {
 
 body.sidebar-open {
   overflow: hidden;
+  position: fixed;
+  width: 100%;
 }
